--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/forecast.js"></script>
+        <script src="scripts/services/request.js"></script>
         <!-- endbuild -->
 </body>
 </html>
